// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should change style on error 1`] = `
<input
  className="sc-bdfBQB dlwpfJ"
  data-testid="test-input"
  name="test-input"
  value="dummy"
/>
`;

exports[`<Input /> should render correctly 1`] = `
<input
  className="sc-bdfBQB jXLNkU"
  data-testid="test-input"
  name="test-input"
  value="dummy"
/>
`;
